# obsilink

./: AGENTS.md  README.md  pyproject.toml
src/obsilink/: __init__.py  extractor.py  models.py  parser.py  replacer.py
tests/: test_extractor.py  test_models.py  test_parser.py  test_replacer.py
