[project]
name = "obsilink"
version = "0.1.0"
description = "Extract Obsidian-style wikilink targets from text"
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
